--- a/notebooks/Task02_vectorsore.ipynb
+++ b/notebooks/Task02_vectorsore.ipynb
@@ -100,24 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b5448db7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "Could not import sentence_transformers python package. Please install it with `pip install sentence-transformers`.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "File \u001b[0;32m~/Documents/kaim/Rag_complaint_chatbot/.venv/lib/python3.10/site-packages/langchain_huggingface/embeddings/huggingface.py:68\u001b[0m, in \u001b[0;36mHuggingFaceEmbeddings.__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 68\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msentence_transformers\u001b[39;00m  \u001b[38;5;66;03m# type: ignore[import]\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sentence_transformers'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m model_kwargs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdevice\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m} \u001b[38;5;66;03m# Change to 'cuda' if using a GPU\u001b[39;00m\n\u001b[1;32m      7\u001b[0m encode_kwargs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnormalize_embeddings\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m}\n\u001b[0;32m----> 9\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[43mHuggingFaceEmbeddings\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m    \u001b[49m\u001b[43mencode_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mencode_kwargs\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# 2. Create and Persist the Vector Store\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# This will save the database into the 'vector_store/' folder\u001b[39;00m\n\u001b[1;32m     17\u001b[0m persist_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvector_store/complaints_db\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "File \u001b[0;32m~/Documents/kaim/Rag_complaint_chatbot/.venv/lib/python3.10/site-packages/langchain_huggingface/embeddings/huggingface.py:74\u001b[0m, in \u001b[0;36mHuggingFaceEmbeddings.__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m     70\u001b[0m     msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     71\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not import sentence_transformers python package. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     72\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease install it with `pip install sentence-transformers`.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     73\u001b[0m     )\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mexc\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_kwargs\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbackend\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorch\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mipex\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_optimum_intel_available() \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_ipex_available():\n",
-      "\u001b[0;31mImportError\u001b[0m: Could not import sentence_transformers python package. Please install it with `pip install sentence-transformers`."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Indexing... this may take 5-10 minutes depending on CPU.\n",
+      "Vector Store saved at ../vector_store/complaints_db\n"
      ]
     }
    ],
@@ -154,6 +146,42 @@
     ")\n",
     "\n",
     "print(f\"Vector Store saved at {persist_directory}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "56f969d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Result 1:\n",
+      "Product: Credit card or prepaid card\n",
+      "Content: for approimately minutes while someone worked on my issue was told that this is an issue for my bank to fi and was hung up on continues to tell me that i need to call my bank and that because the char...\n",
+      "\n",
+      "Result 2:\n",
+      "Product: Credit card or prepaid card\n",
+      "Content: i had an issue with this company beginning in i used my card to purchase something online i then received a bill with an unauthorized charge on it i called the company and disputed the charge they sta...\n",
+      "\n",
+      "Result 3:\n",
+      "Product: Credit card\n",
+      "Content: the credit card company on to investigate the charge through their online how can i dispute a charge process when i called their customer service staff according to the instructions of their online pr...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test if the search works\n",
+    "query = \"How do I dispute an unauthorized credit card charge?\"\n",
+    "results = vector_db.similarity_search(query, k=3)\n",
+    "\n",
+    "for i, res in enumerate(results):\n",
+    "    print(f\"\\nResult {i+1}:\")\n",
+    "    print(f\"Product: {res.metadata['product']}\")\n",
+    "    print(f\"Content: {res.page_content[:200]}...\")"
    ]
   }
  ],
